...
/// This view controller allows creation of a new user
class SignUpController: UIViewController {
    //create the email text filed
    let emailTextField: UITextField = {
        let email = UITextField(frame: .zero);
        email.backgroundColor = .white
        email.attributedPlaceholder = NSAttributedString(string: "Email",
                                                         attributes: [NSAttributedString.Key.foregroundColor: UIColor.darkGray])
        email.textColor = .black
        email.clearButtonMode = .whileEditing
        email.borderStyle = .roundedRect
        email.font = UIFont.systemFont(ofSize: 16)
        email.sizeToFit()
...
    
    //create the username text filed
    let userNameTextField: UITextField = {
        let username = UITextField();
        username.clearButtonMode = .whileEditing
        username.backgroundColor = .white
        username.attributedPlaceholder = NSAttributedString(string: "Username",
                                                         attributes: [NSAttributedString.Key.foregroundColor: UIColor.darkGray])
        username.textColor = .black
        username.borderStyle = .roundedRect
        username.font = UIFont.systemFont(ofSize: 16)
        username.sizeToFit()
        username.translatesAutoresizingMaskIntoConstraints = false
...
    //create the password textfield
    let passwordTextField: UITextField = {
        let password = UITextField();
        password.clearButtonMode = .whileEditing
        password.backgroundColor = .white
        password.textColor = .black
        password.attributedPlaceholder = NSAttributedString(string: "Password",
                                                            attributes: [NSAttributedString.Key.foregroundColor: UIColor.darkGray])
//        password.isSecureTextEntry = true
        
        password.borderStyle = .roundedRect
        password.font = UIFont.systemFont(ofSize: 16)
        password.sizeToFit()
...
    //create the confirmpassword text field
    let confirmPasswordTextField: UITextField = {
        let password = UITextField();
        password.clearButtonMode = .whileEditing
        password.backgroundColor = .white
        password.textColor = .black
        password.attributedPlaceholder = NSAttributedString(string: "Confirm password",
                                                            attributes: [NSAttributedString.Key.foregroundColor: UIColor.darkGray])
//        password.isSecureTextEntry = true
        
        password.borderStyle = .roundedRect
        password.font = UIFont.systemFont(ofSize: 16)
        password.sizeToFit()
...
        return password
    }()
    
    //create the signUp button
    let signUpButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Sign Up", for: .normal)
        button.layer.cornerRadius = 5
        button.clipsToBounds = true
        button.backgroundColor = APP_BLUE
        button.setTitleColor(UIColor.white, for: .normal)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 16)
        button.isEnabled = true
...
